# SpaceTeamsROS_Mavericks

./: .gitignore  README.md  first_time_setup.bash  navigation.ipynb
net_test/: wsl_sub.py
rosbag/rosbag2_2025_11_05-23_04_22/: metadata.yaml
rosbag/test2/: metadata.yaml
space_teams_definitions/: CMakeLists.txt  package.xml
space_teams_definitions/srv/: Float.srv
space_teams_python/: package.xml  setup.cfg  setup.py
space_teams_python/launch/: rosbridge_image_client.launch.py
space_teams_python/resource/: space_teams_python
space_teams_python/space_teams_python/: Final_Client.py  Final_Client_Suyog.py  Manual_Driving.py  detection_client.py  example_client.py  image_client.py  qualification_client.py  rover_controler.py  transformations.py  utils.py
