<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>space_teams_python</name>
  <version>0.0.0</version>
  <description>Python ROS2 package for SpaceTeams project with logger_info service. https://github.com/SimDynamX/SpaceTeamsROS</description>
  <maintainer email="support@simdynamx.com">SimDynamX</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>space_teams_definitions</depend>
  <depend>python3-zmq</depend>
  <depend>rosbridge_server</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
